@@ -2,7 +2,7 @@
     "appDataVer": "4.0",
     "versions": {
         "mainApp": {
-            "ver": "3.6.4.1"
+            "ver": "3.6.4.2"
         },
         "actionApp": {
             "ver": "3.6.4.0"
